fix for nav bar covering admin login and request location page headers.

--- a/static/main.css
+++ b/static/main.css
@@ -232,7 +232,7 @@ nav a{
 
 
 .dashboard{
-  margin: 15px 5px;
+  margin: 40px 5px 5px 20px;
   padding-left: 30px;
   padding-top: 10px;
   padding-bottom: 1px;
